Fix: Addition Mobile Layout 49

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,7 +231,7 @@ header .apply-now:hover {
     margin-left: 100px;
     margin-top: 1.5rem;
     position: relative;
-    z-index: 10;
+    z-index: 100;
     border-radius: 8px;
 }
 
